fix dark mode

--- a/linkShortener/base/static/base/css/styles.css
+++ b/linkShortener/base/static/base/css/styles.css
@@ -18,6 +18,8 @@ body{
     align-items: center;
     transition: .4s linear all;
     color: #fff;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 .copy-msg-set{
     right: 0;
